--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,7 +1,7 @@
 # DATA-SOURCE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
+spring.datasource.username=srduardo
 spring.datasource.password=
 
 # H2 Client
